Fix meta-theme-color not working outside <head>

Document::themeColor() only looks for meta-theme-color inside <head>, however,
the spec for meta-theme-color does not restrict it to <head>.

BUG=671823

Review-Url: https://codereview.chromium.org/2566523003
Cr-Commit-Position: refs/heads/master@{#437619}

Former-commit-id: b0dcd96c51e12739407d11a0259e338d7630e150